# stm32-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: arm-none-eabi.cmake
host/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  stm32l053-blinky
host/platform_for_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runUnitTests
host/platform_for_tests/Testing/Temporary/: CTestCostData.txt
host/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
platform/: CMakeLists.txt
platform/include/: system_stm32l0xx.h
platform/linker/: STM32L053R8_FLASH.ld
platform/src/: startup_stm32l053xx.s  system_stm32l0xx.c
platform_for_tests/: CMakeLists.txt
platform_for_tests/include/: core_cm0plus.h  stm32l053xx.h  system_stm32l0xx.h
platform_for_tests/src/: system_stm32l0xx.c  testgtest.cxx
src/: CMakeLists.txt  main.c
